--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "hapijs-seed-mvc",
-  "version": "2.0.0",
-  "description": "hapi Seed Project - MVC / RDMS",
-  "author": "Claudio Bredfeldt <claudio@cbmono.de>",
-  "license": "MIT",
+  "name": "auth-api",
+  "version": "1.0.0",
+  "description": "",
+  "author": "",
+  "license": "",
   "main": "index.js",
-  "repository": {
-    "url": "https://github.com/cbmono/hapijs-seed-mvc.git"
-  },
   "scripts": {
     "start": "gulp",
     "build": "babel-node --presets es2015,stage-0 ./src/index.js",
