--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "hapi": "^15.1.1",
     "inert": "^4.0.2",
     "joi": "^10.0.0",
+    "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
     "lodash": "^4.16.4",
     "lout": "^9.2.0",
