--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "history": "^4.5.1",
+    "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^2.1.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
