--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "",
+  "author": "Alexander Buyanov",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
